# pycontainer-build

./: .gitignore  ARCHITECTURE.md  AUTHENTICATION.md  IMPLEMENTATION_PLAN.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE.md  README.md  REGISTRY_PUSH.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: example-build.yml.example  pycontainer-build.yml  release.yml
docs/: TESTING.md  azd-integration.md  github-actions.md  local-development.md
examples/: README.md
examples/cross-platform/: README.md  demo.sh
examples/fastapi-app/: README.md  pyproject.toml  requirements.txt
examples/fastapi-app/app/: __init__.py  main.py
marketing/social-media/: CHECKLIST.md  README.md  devto-blog-post.md  launch-guide.md  linkedin-post.md  twitter-post.md
plan/: IMPLEMENTATION_PLAN.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md
plugins/: README.md
plugins/hatch-pycontainer/: README.md  pyproject.toml
plugins/hatch-pycontainer/src/hatch_pycontainer/: __init__.py  hooks.py
plugins/poetry-pycontainer/: README.md  pyproject.toml
plugins/poetry-pycontainer/src/poetry_pycontainer/: __init__.py  plugin.py
plugins/vscode-pycontainer/: README.md  package.json
plugins/vscode-pycontainer/src/: extension.ts
src/pycontainer/: __init__.py  auth.py  builder.py  cache.py  cli.py  config.py  config_loader.py  framework.py  fs_utils.py  oci.py  project.py  registry_client.py  sbom.py
tests/: test_auth.py  test_base_image.py  test_build_push.py  test_cache.py  test_oci_layout.py  test_phase4.py  test_platform.py  test_registry_client.py
