[project]
name = "pycontainer-build"
version = "0.2.1"
description = "Experimental .NET-style native OCI image builder for Python projects (no Docker daemon, no Dockerfile)."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "pycontainer contributors" }
]
dependencies = []

[project.scripts]
pycontainer = "pycontainer.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
