[project]
name = "hatch-pycontainer"
version = "0.1.0"
description = "Hatch plugin for building OCI container images with pycontainer-build"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "pycontainer contributors" }
]
keywords = ["hatch", "plugin", "container", "oci", "docker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Hatch",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "hatchling>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/spboyer/pycontainer-build"
Repository = "https://github.com/spboyer/pycontainer-build"
Issues = "https://github.com/spboyer/pycontainer-build/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hatch_pycontainer"]

[project.entry-points.hatch]
pycontainer = "hatch_pycontainer.hooks"
